[package]
edition = "2021"
name = "rp-usb-uac2"
version = "0.1.0"
authors = ["Leon Andrea Loeser <info@leon-loeser.de>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-8192",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
    "executor-interrupt",
] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
heapless = "0.8.0"
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embedded-alloc = "0.6.0"
embassy-futures = "0.1.1"
pretty-hex = "0.4.1"
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }

[patch.crates-io]
embassy-usb = { git = "https://github.com/M3gaFr3ak/embassy", rev = "6d89f2729ab7a6ee3dd78ccaef1b16677b5a9eee" }
embassy-rp = { git = "https://github.com/M3gaFr3ak/embassy", rev = "6d89f2729ab7a6ee3dd78ccaef1b16677b5a9eee", version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-time = { git = "https://github.com/M3gaFr3ak/embassy", rev = "6d89f2729ab7a6ee3dd78ccaef1b16677b5a9eee" }
embassy-time-driver = { version = "0.1.0", git = "https://github.com/M3gaFr3ak/embassy", rev = "6d89f2729ab7a6ee3dd78ccaef1b16677b5a9eee" }
embassy-time-queue-driver = { version = "0.1.0", git = "https://github.com/M3gaFr3ak/embassy", rev = "6d89f2729ab7a6ee3dd78ccaef1b16677b5a9eee" }
